--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -54,12 +54,14 @@ runs:
         ${{ inputs.VAULT_SECRET_COMMON_PATH }} NAMESPACE | NAMESPACE;
         ${{ inputs.VAULT_SECRET_PATH }} MASTER_IP | MASTER_IP;
         ${{ inputs.VAULT_SECRET_PATH }} NODE_PORT | NODE_PORT;
-        ${{ inputs.VAULT_SECRETS_CICD_PATH }}  AWS_ACCESS_KEY_ID_ECR | AWS_ACCESS_KEY_ID_ECR;
-        ${{ inputs.VAULT_SECRETS_CICD_PATH }}  AWS_SECRET_ACCESS_KEY_ECR | AWS_SECRET_ACCESS_KEY_ECR;
-        ${{ inputs.VAULT_SECRETS_CICD_PATH }}  SSH_KEY | SSH_KEY;
-        ${{ inputs.VAULT_SECRETS_CICD_PATH }}  REGISTRY | REGISTRY;
-        ${{ inputs.VAULT_SECRETS_CICD_PATH }}  GITLAB_TOKEN | GITLAB_TOKEN;
-        ${{ inputs.VAULT_SECRETS_CICD_PATH }}  GITLAB_SERVER | GITLAB_SERVER;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_ACCESS_KEY_ID_ECR | AWS_ACCESS_KEY_ID_ECR;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_SECRET_ACCESS_KEY_ECR | AWS_SECRET_ACCESS_KEY_ECR;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} SSH_KEY | SSH_KEY;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} REGISTRY | REGISTRY;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_TOKEN | GITLAB_TOKEN;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_SERVER | GITLAB_SERVER;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_USER | KCR_USER;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_PASSWORD | KCR_PASSWORD;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} IMAGE_REPOSITORY | IMAGE_REPOSITORY;
   
   - name: Install SSH Key
