--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -57,7 +57,7 @@ runs:
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_SECRET_ACCESS_KEY_ECR | AWS_SECRET_ACCESS_KEY_ECR;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} SSH_KEY | SSH_KEY;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} REGISTRY | REGISTRY;
-        ${{ inputs.VAULT_SECRET_COMMON_PATH }} LOGSTASH_IP | LOGSTASH_IP;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} LOGSTASH_IP | LOGSTASH_IP;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_TOKEN | GITLAB_TOKEN;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_SERVER | GITLAB_SERVER;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_USER | KCR_USER;
