--- a/actions/deploy/manager/action.yaml
+++ b/actions/deploy/manager/action.yaml
@@ -46,8 +46,11 @@ runs:
           ${{ inputs.VAULT_SECRET_COMMON_PATH }} MANAGER_NODE_IP | MANAGER_NODE_IP;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} DEPLOY_USER | DEPLOY_USER;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} SSH_KEY | SSH_KEY;
-          ${{ inputs.VAULT_SECRETS_CICD_PATH }}  GITLAB_TOKEN | GITLAB_TOKEN;
-          ${{ inputs.VAULT_SECRETS_CICD_PATH }}  GITLAB_SERVER | GITLAB_SERVER;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_TOKEN | GITLAB_TOKEN;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_SERVER | GITLAB_SERVER;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_USER | KCR_USER;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_PASSWORD | KCR_PASSWORD;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} IMAGE_REPOSITORY | IMAGE_REPOSITORY;
           
   - name: Generate .env
     run: |
@@ -85,6 +88,13 @@ runs:
       ssh-keyscan -H ${{ env.MANAGER_NODE_IP }} >> ~/.ssh/known_hosts
     shell: bash
   
+  - name: Login to KCR
+    uses: docker/login-action@v1
+    with:
+      registry: ${{ env.IMAGE_REPOSITORY }}
+      username: ${{ env.KCR_USER }}
+      password: ${{ env.KCR_PASSWORD }}
+
   - name: Rsync to Manager Node
     run: |
       ssh ${{ env.DEPLOY_USER }}@${{ env.MANAGER_NODE_IP }} "chown -R ${{ env.DEPLOY_USER }}: /opt/${{ env.PROJECT_NAME }} && rm -rf /opt/${{ env.PROJECT_NAME }}/*"
