--- a/actions/security/bandit/action.yaml
+++ b/actions/security/bandit/action.yaml
@@ -39,3 +39,4 @@ runs:
     uses: thollander/actions-comment-pull-request@v2
     with:
       filePath: ${{ inputs.github_workspace }}/output.md
+    shell: bash
