--- a/actions/security/bandit/action.yaml
+++ b/actions/security/bandit/action.yaml
@@ -1,5 +1,5 @@
 # File: .github/actions/bandit-analysis.yml
-name: Bandit Analysis
+name: Vuln and Secret Analysis
 description: Analyze code with Bandit and Comment on PR
 
 inputs:
@@ -38,8 +38,8 @@ runs:
       python3 ${{ inputs.github_workspace }}/.helpers/scripts/formater.py report.csv output.md
     shell: bash
   
-  # - name: PR comment with file
-  #   uses: thollander/actions-comment-pull-request@v2
-  #   with:
-  #     filePath: ${{ inputs.github_workspace }}/output.md
+  - name: PR comment with file
+    uses: thollander/actions-comment-pull-request@v2
+    with:
+      filePath: ${{ inputs.github_workspace }}/output.md
 
