--- a/actions/notify/chats/action.yaml
+++ b/actions/notify/chats/action.yaml
@@ -10,7 +10,9 @@ inputs:
   VAULT_SECRETS_CICD_PATH:
     description: Vault Secrets Path
     required: true
-
+  ENVIRONMENT:
+    description: Notfication Message
+    required: true
 runs:
   using: composite
   steps:
