--- a/actions/security/action.yaml
+++ b/actions/security/action.yaml
@@ -125,7 +125,7 @@ runs:
         extra_args: --debug
 
     - name: Setup Python
-      if: ${{ inputs.BANDIT_SCAN == 'true' and inputs.SNYK_SCAN == 'true' }}
+      if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ inputs.PYTHON_VERSION }}
