--- a/actions/security/action.yaml
+++ b/actions/security/action.yaml
@@ -1,7 +1,7 @@
 name: Static Code Analysis
 description: Static Code Analysis with Sonarqube
 inputs:
-  PROJECT_NAME:
+  PROJECT_KEY:
     description: Project Name
     required: true
   VAULT_ENABLED:
