--- a/actions/security/action.yaml
+++ b/actions/security/action.yaml
@@ -2,7 +2,7 @@ name: Static Code Analysis
 description: Static Code Analysis with Sonarqube
 inputs:
   PROJECT_KEY:
-    description: Project Name
+    description: Sonar Project Key
     required: true
   VAULT_ENABLED:
     description: Enable if VAULT is used for secrets
@@ -177,7 +177,6 @@ runs:
 
     - name: Run Snyk to check for vulnerabilities
       if: ${{ inputs.SNYK_SCAN == 'true' }}
-      continue-on-error: true
       run: |
         wget -q https://static.snyk.io/cli/latest/snyk-linux && mv ./snyk-linux ./snyk && chmod +x ./snyk
         ./snyk auth ${{ env.SNYK_TOKEN }}
@@ -189,4 +188,3 @@ runs:
     #  uses: github/codeql-action/upload-sarif@v2
     #  with:
     #    sarif_file: ${{ inputs.PROJECT_APP_PATH }}/snyk.sarif
-
