changed secret path and cicd path

--- a/actions/security/action.yaml
+++ b/actions/security/action.yaml
@@ -14,6 +14,9 @@ inputs:
   VAULT_SECRETS_PATH:
     description: VAULT secrets path
     type: string
+  VAULT_SECRETS_CICD_PATH:
+    description: VAULT secrets path
+    type: string
   VAULT_TOKEN:
     description: VAULT Token
     type: string
@@ -72,10 +75,10 @@ runs:
         token: ${{ inputs.VAULT_TOKEN }}
         tlsSkipVerify: true
         secrets: |
-          ${{ inputs.VAULT_SECRETS_PATH }} SONARQUBE_HOST | SONARQUBE_HOST;
-          ${{ inputs.VAULT_SECRETS_PATH }} SONARQUBE_TOKEN | SONARQUBE_TOKEN;
-          ${{ inputs.VAULT_SECRETS_PATH }} SNYK_TOKEN | SNYK_TOKEN;
-          ${{ inputs.PROJECT_SECRETS_PATH }} PROJECT_KEY | PROJECT_KEY;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} SONARQUBE_HOST | SONARQUBE_HOST;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} SONARQUBE_TOKEN | SONARQUBE_TOKEN;
+          ${{ inputs.VAULT_SECRETS_CICD_PATH }} SNYK_TOKEN | SNYK_TOKEN;
+          ${{ inputs.VAULT_SECRETS_PATH }} PROJECT_KEY | PROJECT_KEY;
   
     - name: Import Secrets
       if: ${{ inputs.VAULT_ENABLED == 'false' }}
