add workdir for manager

--- a/actions/deploy/manager/ansible/roles/manager/tasks/main.yml
+++ b/actions/deploy/manager/ansible/roles/manager/tasks/main.yml
@@ -6,3 +6,4 @@
   vars:
     PWD: "{{ lookup('env', 'PWD') }}"
     MODULE: "{{ lookup('env', 'DJANGO_MODULE') }}"
+    DIR: "{{ lookup('env', 'WORK_DIR')}}"
