--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -53,8 +53,10 @@ runs:
         ${{ inputs.VAULT_SECRET_COMMON_PATH }} NAMESPACE | NAMESPACE;
         ${{ inputs.VAULT_SECRET_PATH }} MASTER_IP | MASTER_IP;
         ${{ inputs.VAULT_SECRET_PATH }} NODE_PORT | NODE_PORT;
+        ${{ inputs.VAULT_SECRET_PATH }} CLUSTER_NAME | CLUSTER_NAME;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_ACCESS_KEY_ID_ECR | AWS_ACCESS_KEY_ID_ECR;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_SECRET_ACCESS_KEY_ECR | AWS_SECRET_ACCESS_KEY_ECR;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_REGION | AWS_REGION;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} SSH_KEY | SSH_KEY;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} REGISTRY | REGISTRY;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} LOGSTASH_IP | LOGSTASH_IP;
@@ -63,8 +65,10 @@ runs:
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_USER | KCR_USER;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_PASSWORD | KCR_PASSWORD;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} IMAGE_REPOSITORY | IMAGE_REPOSITORY;
-  
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} K8S_CLUSTER_INFRA | K8S_CLUSTER_INFRA;
+
   - name: Install SSH Key
+    if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
     uses: shimataro/ssh-key-action@v2
     with:
       key: ${{ env.SSH_KEY }}
@@ -72,19 +76,28 @@ runs:
       if_key_exists: replace
   
   - name: Add Known Hosts
+    if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
     run: |
       ssh-keyscan -H ${{ env.MASTER_IP }} >> ~/.ssh/known_hosts
     shell: bash
 
   - name: Extract Kubeconfig file
+    if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
     run: |
       scp root@${{ env.MASTER_IP }}:/etc/rancher/rke2/rke2.yaml kubeconfig.yaml
       sed -i "s|https://127.0.0.1:6443|https://${{ env.MASTER_IP }}:6443|g" kubeconfig.yaml
     shell: bash
   
+  - name: Pull KUBECONFIG
+    if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
+    run: |
+      #rm -rf /root/.kube/config.yaml
+      aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.CLUSTER_NAME }}
+    shell: bash
+
   - name: Create Namespace
     run: |
-      export KUBECONFIG=kubeconfig.yaml
+      export KUBECONFIG=/root/.kube/config.yaml
       if ! kubectl get namespace '${{ env.NAMESPACE }}' &> /dev/null; then
         kubectl create namespace "${{ env.NAMESPACE }}"
       else
